# flask-expense

./: .dockerignore  .env-sample  .gitignore  Dockerfile  README.md  app.wsgi  db_initialize.py  demo.html  docker-compose.yml  flask-expense.conf  main.py  nixpacks.toml  package-lock.json  package.json  pyproject.toml  requirements.txt
app/: __init__.py  forms.py  models.py  routes.py
app/static/: script.js  style.css
app/static/src/: input.css
app/templates/: add.html  base.html  dashboard.html  edit.html  flowbite_test.html  index.html
instance/: expensesDB.db
