[project]
name = "flask-expense"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
dependency-groups = {dev = [], prod = []}

[tool.uv.dependencies]
# This should be empty since you're using groups

[tool.uv.group.dev.dependencies]
# Add your dev dependencies here when needed

[tool.uv.group.prod.dependencies]
flask = ">=3.1.1"
flask-sqlalchemy = ">=3.1.1"
flask-wtf = ">=1.2.2"
gunicorn = ">=23.0.0"
psycopg2-binary = ">=2.9.10"
python-dotenv = ">=1.1.1"
whitenoise = ">=6.9.0"